# uvicorn-poetry-fastapi-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: pipeline.yml
hooks/: post_gen_project.py
tests/: conftest.py  constants.py  test_build_docker_image.py  test_custom_config.py  test_default_config.py  test_docker_image_build.py  test_docker_image_builds.py  test_tools.py  utils.py
{{cookiecutter.project_name | slugify}}/: pyproject.toml
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/actions/setup-environment/: action.yaml
{{cookiecutter.project_slug}}/.github/workflows/: pipeline.yml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/test_api/: test_api_endpoints.py
