[tool.poetry]
name = "fast-api-micro-service-template"
version = "1.3.0"
description = "A Cookiecutter template for spinning up a micro service"
authors = ["Max Pfeiffer <max.pfeiffer@maxpfeiffer.ch>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.dev-dependencies]
black = "24.2.0"
cookiecutter = "2.5.0"
coverage = "7.4.1"
docker = "7.0.0"
furl = "2.1.3"
httpx = "0.26.0"
pytest = "8.0.0"
pre-commit = "3.6.0"
pytest-cookies = "0.7.0"
pytest-cov = "4.1.0"
toml = "0.10.2"
dockerfile-parse = "2.0.1"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 80
target-version = ['py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
