[tool.poetry]
name = "fast-api-micro-service-template"
version = "1.3.0"
description = "A Cookiecutter template for spinning up a micro service"
authors = ["Max Pfeiffer <max.pfeiffer@maxpfeiffer.ch>"]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.dev-dependencies]
cookiecutter = "2.6.0"
coverage = "7.6.1"
docker = "7.1.0"
dockerfile-parse = "2.0.1"
furl = "2.1.3"
httpx = "0.27.2"
pytest = "8.3.2"
pre-commit = "3.8.0"
pytest-cookies = "0.7.0"
pytest-cov = "5.0.0"
toml = "0.10.2"
ruff = "0.6.8"

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "I", # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
