[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
{% if cookiecutter.author_name and cookiecutter.author_email %}
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
{% else %}
authors = []
{% endif %}
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = "0.24.0.post1", extras = ["standard"]}
fastapi = "0.104.1"

[tool.poetry.dev-dependencies]
black = "23.11.0"
coverage = "7.3.3"
pre-commit = "3.6.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"
requests = "2.28.1"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
