[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
{% if cookiecutter.author_name and cookiecutter.author_email %}
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
{% else %}
authors = []
{% endif %}
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {version = "0.30.6", extras = ["standard"]}
fastapi = "0.112.1"

[tool.poetry.dev-dependencies]
black = "24.8.0"
coverage = "7.6.1"
httpx = "0.27.0"
pre-commit = "3.8.0"
pytest = "8.3.2"
pytest-cov = "5.0.0"
requests = "2.32.3"

# https://docs.pytest.org/en/latest/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 80
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
